# pacs

Casa/Challenge1/: Challenge 1,2,3
Casa/Challenge1/old/: main_tetra.cpp  main_tria.cpp
Casa/Challenge2/: rk23.cpp  rk45.cpp  rk45.hpp
Casa/Challenge3/: Makefile  integer-list.cpp  integer-list.h
Examples/: #Makefile.inc#  .#Makefil.inc
Examples/lib/: libmuparser.so.2.2.4
Examples/lib/pkgconfig/: muparser.pc
Examples/src/: example  example.cpp
Examples/src/Aliasing/: main_aliasing
Examples/src/Array/: main_array
Examples/src/MyMat0_fulltemplate/: MyMat0.hpp
Examples/src/RK45/: main_rk  main_rk.cpp
Examples/src/STL/: beginend  tuple1  tuple2
Examples/src/muParserInterface/: Makefile  Makefile.inc  test_Muparser
Exercises/2015/01-square_sum/ex1/: sum.cpp  sum0.cpp
Exercises/99-gdbvalgrind/buggy/: coverage.info  integer-list  integer-list.gcda  integer-list.gcno  lcov-1.11-1.noarch.rpm
Exercises/99-gdbvalgrind/buggy/cmake/: CMakeLists.txt
Exercises/99-gdbvalgrind/my-buggy/: Makefile  integer-list  integer-list.h
Exercises/Challanges/Challenge1/Challenge1-2-3_10501404/: tetrahedron.hpp
Exercises/Challanges/Challenge1/Challenge1_10395803/ch_1-2/include/: func.hpp  triangle.hpp
Exercises/Challanges/Challenge1/Challenge1_10395803/ch_1-2/src/: edge.cpp
Exercises/Challanges/Challenge1/Challenge1_10395803/ch_3/include/: triangle.hpp
Exercises/Challanges/Challenge1/Challenge1_10395803/ch_3/src/: triangle.cpp
Exercises/Challanges/Challenge1/ChallengeLorenzoSala/: main_tetra  main_tria
Exercises/Challanges/Challenge1/ChallengeLorenzoSala/headers/: functions.hpp  mesh.hpp
Exercises/Challanges/Challenge1/challenge_ludodelpop/: edge.hpp  main.cpp  triangle.hpp
Exercises/Challanges/Challenge1/challengesfedericasottocasa/challenge1/: Edges.cpp  README
Exercises/Challanges/Challenge1/challengesfedericasottocasa/challenge2/: Edges.hpp  Triangle.hpp  mainMesh.cpp
Exercises/Challanges/Challenge1/challengesfedericasottocasa/challenge3/: Tetra.hpp  mainMesh.cpp
Exercises/Challanges/Challenge1/larabombardieri/Challenge_3/include/: Geometry3D.hpp
Exercises/Challanges/Challenge1/larabombardieri/Challenge_3/src/: Makefile
Exercises/Challanges/Challenge1/larabombardieri/Challenges_1_2/src/: main.cpp
Exercises/Challenges/Challenge1/: main2D.cpp
Exercises/Challenges/Challenge1/Challenge1-2-3_10501404/: Makefile  README.txt  challenge.cpp  corrections.txt  edge.cpp  edge.hpp  point.hpp  tetrahedron.cpp  triangle.cpp  triangle.hpp
Exercises/Challenges/Challenge1/Challenge1_10395803/: corrections.txt
Exercises/Challenges/Challenge1/Challenge1_10395803/ch_1-2/include/: edge.hpp
Exercises/Challenges/Challenge1/Challenge1_10395803/ch_1-2/src/: Makefile  func.cpp  main.cpp  triangle.cpp
Exercises/Challenges/Challenge1/Challenge1_10395803/ch_3/include/: func.hpp  tetrahedron.hpp
Exercises/Challenges/Challenge1/Challenge1_10395803/ch_3/src/: Makefile  func.cpp  main.cpp  tetrahedron.cpp
Exercises/Challenges/Challenge1/ChallengeLorenzoSala/: Makefile  corrections.txt  main_tetra  main_tetra.cpp  main_tria  main_tria.cpp
Exercises/Challenges/Challenge1/ChallengeLorenzoSala/headers/: functions.hpp  mesh.hpp
Exercises/Challenges/Challenge1/Daquin/: corrections.text  exee1.cc  exee2.cc  exee3.cc
Exercises/Challenges/Challenge1/LorenzoSala/: Makefile  functions.cpp  main.cpp  mesh.hpp
Exercises/Challenges/Challenge1/NicolaFerro/: Makefile  corrections.txt  main3D.cpp
Exercises/Challenges/Challenge1/challenge_ludodelpop/: Makefile  corrections.txt  edge.cpp  tetrahedon.cpp  tetrahedon.hpp
Exercises/Challenges/Challenge1/challengesfedericasottocasa/challenge1/: Makefile  mainMesh.cpp
Exercises/Challenges/Challenge1/challengesfedericasottocasa/challenge2/: README
Exercises/Challenges/Challenge1/challengesfedericasottocasa/challenge3/: Makefile  README  Triangle.cpp  Triangle.hpp
Exercises/Challenges/Challenge1/larabombardieri/Challenge_3/src/: main.cpp  (+1 more)
Exercises/Challenges/Challenge2/LorenzoSala/: Makefile  main_rk  main_rk.cpp  rk.cpp  rk.hpp  rk23.cpp  rk23.hpp  rk45.cpp
Exercises/Challenges/Challenge2/RK-federica-sottocasa/: Makefile.inc  READ ME  main_rk.cpp  rk.cpp  rk.hpp
Exercises/Challenges/Challenge2/RK-federica-sottocasa-versione2/: Makefile  READ ME  corrections.txt  main_rk.cpp  rk.cpp  rk.hpp
Exercises/Challenges/Challenge2/frarega/es1/: Makefile  README  corrections.txt  main.cpp  rk.hpp
Exercises/Challenges/Challenge2/frarega/es2/: Makefile  README  corrections.txt  exponential.pot  main.cpp  muParserFunction.cpp  muParserFunction.hpp  options.pot  options2.pot  rk.cpp  rk.hpp
Exercises/Challenges/Challenge2/ludodelpop10377670/: Makefile  README  corrections.txt  main_rk.cpp  plot23.sh  plot45.sh  rk23.cpp  rk23.hpp
Exercises/Challenges/Challenge2/nicolaferro/: corrections.txt
Exercises/Challenges/Challenge2/nicolaferro/RK23_RK45/: Makefile  README  main.cpp  plot45.sh  rk23.cpp  rk23.hpp  rk45.cpp
Exercises/Challenges/Challenge2/nicolaferro/RK_optimalstep/: README  main.cpp  plot23.sh  rk23.cpp  rk45.cpp  rk45.hpp
Exercises/Challenges/Challenge3/FedericaSottocasa-integer-list/: CMakeLists.txt  README.txt  integer-list.cpp  integer-list.h  test-append.cpp  test-find.cpp  test-first.cpp  test-prev-next.cpp  test-replace.cpp  test-setdata.cpp  test-size.cpp
Exercises/Challenges/Challenge3/LorenzoSala/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Makefile_old  cmake_install.cmake  coverage.info  integer-list  integer-list.cpp  integer-list.h
Exercises/Challenges/Challenge3/LorenzoSala/Testing/Temporary/: CTestCostData.txt
Exercises/Challenges/Challenge3/nicolaferro/buggy_list/: CMakeLists.txt  README.md  integer-list.h  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
Extras/Students/: Students_2015.txt
Extras/muParser/: Makefile  config.status
Extras/muParser/.deps/: muParser_dll_muParser.o.d  muParser_dll_muParserBase.o.d  muParser_dll_muParserBytecode.o.d  muParser_dll_muParserDLL.o.d  muParser_dll_muParserTest.o.d
Extras/muParser/samples/example1/: example1
(+3 files in other folders)
